<resources>
    <string name="app_name">BabyNeedsWithBita</string>
    <string name="baby_needs_app_with_bita">Baby Needs App With Bita</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_baby_needs_start_page">BabyNeedsStartPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add item</string>
    <string name="enter_item">Enter Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="title_activity_baby_needs_list">BabyNeedsList</string>
    <string name="date_created">Date Created</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signout">SignOut</string>
</resources>