<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".CreateAccountActivity">


    <ProgressBar
        android:id="@+id/progressbar_create_account"
        android:visibility="gone"
        android:outlineAmbientShadowColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/username_create_account"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"/>


    <AutoCompleteTextView
        android:id="@+id/email_create_account"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/password_create_account"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/create_button_create_account"
        android:text="@string/create_account"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>