<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/enter_item_text"
                android:text="@string/enter_item"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/camera_image"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_width="81dp"
                    android:layout_height="70dp"/>





            </RelativeLayout>




            <EditText
                android:id="@+id/item_name"
                android:hint="@string/item_name"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/item_quantity"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/item_Color"
                android:inputType="text"
                android:hint="@string/color"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/item_size"
                android:inputType="number"
                android:hint="@string/size"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/popup_progressbar"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:text="@string/save"
                android:layout_marginTop="18dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>