<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmation_text"
                android:layout_centerHorizontal="true"
                android:text="@string/are_you_sure"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/confirmation_popup_progressbar"
                android:layout_below="@id/confirmation_text"
                android:layout_above="@id/yes_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/yes_button"
                android:text="@string/yes"
                android:layout_below="@id/confirmation_text"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/no_button"
                android:text="@string/no"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/confirmation_text"
                android:layout_marginTop="30dp"
                android:textSize="10sp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>